--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
+                      <li class="nav__item"><a href="#home" class="nav__link">Inicio</a></li>
                         <li class="nav__item"><a href="#pedido" class="nav__link">Atencion Al Publico</a></li>
-                        <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>     
                         <li class="nav__item"><a href="#contacto" class="nav__link">Contacto</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
@@ -62,11 +62,19 @@
             <!--========== CONSULTA ==========-->
 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 <!-- FORMULARIO MODIFICADO -->
+<h1 class="menu-title" id="pedido">Hacer Consulta Online</h1>
 <form id="pedidoForm" class="menu__container1 bd-container">
-  <h1 class="menu-title" id="pedido">Hacer Consulta Online</h1>
+
 
   <div id="pedido" class="menu__container1 bd-container">
     <div>
